@@ -13,6 +13,19 @@
     background-color: #212121;
 }
 
+.np-info-cover {
+    background-size:cover;
+    background-color:#000;
+}
+
+.np-info-card-cover {
+    background:rgba(72, 72, 72, 0.9) !important;
+}
+
+.np-info .theme--dark.v-tabs__bar {
+    background:rgba(72, 72, 72, 0.9) !important;
+}
+
 .subtoolbar {
     background-color: #424242 !important;
     border-bottom: 1px solid #333;
