@@ -13,6 +13,19 @@
     background-color: #f5f5f5;
 }
 
+.np-info-cover {
+    background-size:cover;
+    background-color:#fff;
+}
+
+.np-info-card-cover {
+    background:rgba(255, 255, 255, 0.9) !important;
+}
+
+.np-info .theme--light.v-tabs__bar {
+    background:rgba(255, 255, 255, 0.9) !important;
+}
+
 .subtoolbar {
     background-color: #fff !important;
     border-bottom: 1px solid #f0f0f0;
